--- a/Session12/Windows/AddProductToMakeOrderPage.xaml
+++ b/Session12/Windows/AddProductToMakeOrderPage.xaml
@@ -114,29 +114,32 @@
                                     Grid.Column="2"
                                     Margin="0 0 10 0"/>
 
-                            <ListBox
-                                    Margin="0 10 0 0"
-                                    Grid.Column="1"
+
+                            <Border Grid.Column="1"
                                     Grid.ColumnSpan="2"
                                     Grid.Row="3"
-                                    ItemsSource="{Binding Path=SupplierCountry}">
-                                <ListBox.ItemsPanel>
-                                    <ItemsPanelTemplate>
-                                        <WrapPanel IsItemsHost="True"/>
-                                    </ItemsPanelTemplate>
-                                </ListBox.ItemsPanel>
-                                <ListBox.ItemTemplate>
-                                    <DataTemplate>
-                                        <Border 
+                                    BorderBrush="Black"
+                                    BorderThickness="1"
+                                    Padding="8">
+                                <ItemsControl ItemsSource="{Binding Path=SupplierCountry}">
+                                    <ItemsControl.ItemsPanel>
+                                        <ItemsPanelTemplate>
+                                            <WrapPanel IsItemsHost="True"/>
+                                        </ItemsPanelTemplate>
+                                    </ItemsControl.ItemsPanel>
+                                    <ItemsControl.ItemTemplate>
+                                        <DataTemplate>
+                                            <Border 
                                                 BorderBrush="{Binding Brush}"
                                                 BorderThickness="2"
                                                 Padding="3">
-                                            <TextBlock Text="{Binding Title}"/>
-                                        </Border>
-                                    </DataTemplate>
-                                </ListBox.ItemTemplate>
-                            </ListBox>
-
+                                                <TextBlock Text="{Binding Title}"/>
+                                            </Border>
+                                        </DataTemplate>
+                                    </ItemsControl.ItemTemplate>
+                                </ItemsControl>
+                            </Border>
+                            
                             <TextBlock
                                     Text="{Binding Path=Quantity,
                                                    StringFormat={}Количество: {0}}"
@@ -145,6 +148,19 @@
                                     TextWrapping="Wrap"
                                     Margin="0 0 10 0"
                                     MaxWidth="120"/>
+
+                            <StackPanel Grid.Row="2"
+                                        Grid.Column="3"
+                                        Margin="15 0 0 10">
+
+                                <TextBlock Text="Закупаемая стоимость:"
+                                           Margin="0 0 0 5"/>
+                                <TextBox Text="{Binding PurchasePrice}"
+                                         MaxWidth="100"
+                                         HorizontalAlignment="Left"
+                                         TextWrapping="Wrap"
+                                         MinWidth="50"/>
+                            </StackPanel>
 
                             <StackPanel Grid.Row="3"
                                         Grid.Column="3"
@@ -155,6 +171,7 @@
                                 <TextBox x:Name="QuantityOrder"
                                          Text="{Binding QuantityOrder}"
                                          MaxWidth="100"
+                                         MinWidth="50"
                                          HorizontalAlignment="Left"
                                          TextWrapping="Wrap"/>
                             </StackPanel>
