--- a/Session12/Windows/AddProductToMakeOrderPage.xaml
+++ b/Session12/Windows/AddProductToMakeOrderPage.xaml
@@ -5,7 +5,10 @@
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
         xmlns:local="clr-namespace:Session12.Windows"
         mc:Ignorable="d"
-        Title="AddProductToMakeOrderPage" Height="450" Width="800"
+        Title="Добавление продукта в заказ"
+        Height="450"
+        Width="800"
+        Icon="/Resources/Image/logo.png"
         DataContext="{Binding RelativeSource={RelativeSource Self}}">
     <Grid>
         <Grid.RowDefinitions>
