--- a/Session12/Resources/Style/StyleToLoginRegist.xaml
+++ b/Session12/Resources/Style/StyleToLoginRegist.xaml
@@ -29,7 +29,7 @@
                 Value="DemiBold"/>
         <Setter 
                 Property="TextBlock.FontFamily"
-                Value="Comic Sans MS"/>
+                Value="Bahnschrift"/>
     </Style>
     <!--#endregion-->
 
