--- a/Session12/App.xaml
+++ b/Session12/App.xaml
@@ -14,6 +14,7 @@
                 <ResourceDictionary Source="/Resources/Style/StyleToProductList.xaml"/>
                 <ResourceDictionary Source="/Resources/Style/StyleToOrderList.xaml"/>
                 <ResourceDictionary Source="/Resources/Style/StyleProductIncomingListPage.xaml"/>
+                <ResourceDictionary Source="/Resources/Style/StyleMakeOrderPage.xaml"/>
             </ResourceDictionary.MergedDictionaries>
         </ResourceDictionary>
     </Application.Resources>
