--- a/Session12/Resources/Style/StyleToOrderList.xaml
+++ b/Session12/Resources/Style/StyleToOrderList.xaml
@@ -14,6 +14,7 @@
                             <StackPanel Orientation="Horizontal">
                                 <TextBlock Text="{Binding Name}"
                                            FontWeight="Bold"
+                                           FontFamily="Bahnschrift"
                                            Foreground="Gray"
                                            FontSize="22"
                                            VerticalAlignment="Bottom" />
