--- a/Session12/MainWindow.xaml
+++ b/Session12/MainWindow.xaml
@@ -13,7 +13,7 @@
     <Grid>
         <Grid.RowDefinitions>
             <RowDefinition Height="12*"/>
-            <RowDefinition Height="190*"/>
+            <RowDefinition Height="180*"/>
         </Grid.RowDefinitions>
         <Grid.ColumnDefinitions>
             <ColumnDefinition Width="*"/>
@@ -25,6 +25,7 @@
                    VerticalAlignment="Center"
                    HorizontalAlignment="Center"
                    FontSize="20"
+                   Margin="0 0 0 10"
                    FontFamily="Bahnschrift"/>
 
         <StackPanel
