--- a/Session12/Pages/ProductsListPage.xaml
+++ b/Session12/Pages/ProductsListPage.xaml
@@ -219,6 +219,13 @@
                        Margin="0 0 20 0"/>
 
             <StackPanel Orientation="Horizontal" Visibility="{Binding user.VisibilitiButton}">
+
+                <Button Padding="5"
+                        Content="Удалить"
+                        Margin="10"
+                        Click="DeleteProductInProductList"
+                        FontFamily="Bahnschrift"
+                        Visibility="{Binding user.VisibilitiButton}"/>
                 
                 <Button Padding="5"
                         Content="Добавить"
